1. Fix rows - wrap all form inputs in own row 2. Add padding top bottom to row 3. remove unneccessary margin 4. override 3rd part font-size

--- a/src/realaccount/realaccount.css
+++ b/src/realaccount/realaccount.css
@@ -21,16 +21,20 @@
 }
 
 .real-dialog select + .ui-selectmenu-button {
-    margin-bottom: 10px;
-    font-size: 14px;
+    /* override jq-ui css */
+    font-size: 14px !important;
     z-index: 100;
 }
 
+.real-dialog .row {
+    padding: 5px 0;
+}
 
 /* for jq select menu */
 
 .real-dialog-ul {
-    font-size: 14px;
+    /* override binary-style css */
+    font-size: 14px !important;
     max-height: 100px;
 }
 
